--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <button class="btn_stop">Stop</button>
         </div>
     </div>
+    <div class="div_items">
+        <ol class="items">
+        </ol>
+    </div>
 
 <script src="./java/main.js"></script>
 </body>
